2007-10-26  Sven Neumann  <sven@gimp.org>

	Reenabled update of the histogram while doing color corrections
	(bug 490182):

	* app/core/gimpviewable.[ch]: added new methods preview_freeze()
	and preview_thaw().

	* app/core/gimpimagemap.c
	(gimp_image_map_new): freeze the drawable preview.
	(gimp_image_map_dispose): thaw the  drawable preview.
	(gimp_image_map_do): update the drawable, not the image.

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_response): no
	need to invalidate the drawable preview any longer.

2007-10-26  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_image_props): never allocate
	image->cmap smaller than GIMP_IMAGE_COLORMAP_SIZE. Fixes bug #490048.

2007-10-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c
	(gimp_histogram_editor_layer_changed): connect to
	GimpDrawable::update instead of GimpViewable::invalidate-preview.

2007-10-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.c:
	Allow a maximum of two calls to backchar() needed by the "case '.'"
	part of the switch statement in token(). Fixes bug #490198.

2007-10-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Aligned static function
	prototypes.

2007-10-25  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Tiny cosmetic change on the
	ClampedSide enum definition.

2007-10-25  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/gimp-remote.[ch]
	* tools/gimp-remote-x11.c: split gimp-remote into common and X11
	specific code.

2007-10-25  Michael Natterer  <mitch@gimp.org>

	* configure.in: made all tests consistently use
	'test "x$foo" = xbar' instead of 5 variants of which some were
	broken. Spotted by Peter Breitenlohner, fixes bug #490068.

2007-10-25  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.1 (interface age 1).

2007-10-25  Sven Neumann  <sven@gimp.org>
